--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversityApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.25.jar=D:\\SoftwareDevelopment1\\mysqlConnector\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.25.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=TeacherFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
