--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\HiddenHopes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\solai\\Downloads\\mysql-connector-java-8.0.25.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\solai\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
