--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\HiddenHopes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+do.depend=false
+do.jar=true
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\WALTON\\Documents\\NetBeansProjects\\uparjon banking system\\uperjon bank\\Uparjon-Bank-Management-master\\mysql-connector-java-8.0.25.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\WALTON\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
