--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\HiddenHopes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\ASUS\\Desktop\\GOAL DIGGER\\E-commerce-car-salling-project-by-java--main\\mysql-connector-java-8.0.25.jar
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
