--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=UniversityApp
+application.vendor=User
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/UniversityApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.25.jar=D:\\SoftwareDevelopment1\\mysqlConnector\\mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\User\\Downloads\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=TeacherFrame
+main.class=HomeFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
